--- a/game/templates/question/question.html
+++ b/game/templates/question/question.html
@@ -13,10 +13,10 @@
 <form action="{% url 'game:save-response' %}" method="post">
 {% csrf_token %}
     {% if question.type == "TEXTO" %}
-        <span>Respuesta: </span><input type="text" name="text_answer">
+        <span>Respuesta: </span><input type="text" name="answer">
     {% elif question.type == "CUESTIONARIO" %}
         {% for answer in answers %}
-            <input type="radio" name="gender" value="{{ answer.id }}" > {{ answer.text }}<br>
+            <input type="radio" name="answer" value="{{ answer.id }}" > {{ answer.text }}<br>
         {% endfor %}
     {% endif %}
     <input type="hidden" name="question_id" value="{{ question.id }}">
