--- a/game/templates/question/question.html
+++ b/game/templates/question/question.html
@@ -3,24 +3,46 @@
 {% block contenido %}
 
 {# Just a simple question #}
-
-{% if question.image %}
-    <img src="{{ question.image.url }}">
-{% endif %}
-
-{{ question.text }}
+<div class="container">
+    <div class="row centered">
+        <div class="col-lg-12">
+            {% if question.image %}
+                <img src="{{ question.image.url }}" class="img-thumbnail" height="900" width="800">
+            {% endif %}
+            </div>
+        <div class="col-lg-12">
+            <h2><strong>{{ question.text }}</strong></h2>
+        </div>
+    </div>
 
 <form action="{% url 'game:save-response' %}" method="post">
 {% csrf_token %}
     {% if question.type == "TEXTO" %}
-        <span>Respuesta: </span><input type="text" name="answer">
+        <div class="row centered">
+                <div class="row form-group"></div>
+                <div class="row form-group"></div>
+                <div class="row form-group">
+                    <input type="text" name="answer">
+                </div>
+        </div>
     {% elif question.type == "CUESTIONARIO" %}
         {% for answer in answers %}
-            <input type="radio" name="answer" value="{{ answer.id }}" > {{ answer.text }}<br>
+                <div class="row">
+                    <div class="col-lg-6 col-lg-offset-2">
+                        <h2><input type="radio" name="answer" value="{{ answer.id }}">
+                        {{ answer.text }}</h2>
+                    </div>
+                </div>
         {% endfor %}
     {% endif %}
     <input type="hidden" name="question_id" value="{{ question.id }}">
-    <input type="submit" value="Siguiente" />
+    <div class="row form-group"></div>
+    <div class="row form-group"></div>
+    <div class="row centered">
+        <div class="col-lg-12">
+            <input type="submit" class="btn btn-success btn-lg" value="Siguiente" />
+        </div>
+    </div>
 </form>
 
 {% if cheat_number > 0 %}
@@ -68,6 +90,7 @@
 
     </script>
 {% endif %}
+</div>
 
 
 {% endblock %}
