--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,39 @@
 {% extends 'base.html' %}
-
-{% block title %}Login{% endblock %}
+{% load bootstrap3 %}
 
 {% block contenido %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-  </form>
+		<div class="navbar navbar-default navbar-fixed-top">
+		  <div class="container">
+			<div class="navbar-header">
+			  <a class="navbar-brand" href="{% url 'game:home' %}"><b>TORCUATO JONES</b></a>
+			</div>
+			<div class="navbar-collapse collapse">
+			  <ul class="nav navbar-nav navbar-right">
+				<li><a href="{% url 'user:signup' %}">Sign up</a></li>
+			  </ul>
+			</div><!--/.nav-collapse -->
+		  </div>
+		</div>
+
+		<div class="container">
+			<div class="row centered">
+				<div class="col-lg-6">
+                  <h1><strong>TORCUATO JONES</strong></h1>
+					<h1>Login</h1>
+					<form method="post" class="form-horizontal" role="form">
+					  <div class="form-group">
+					        {% csrf_token %}
+                            {% bootstrap_field form.username field_class="col-md-5" show_label=False layout="horizontal" size="small"  %}
+                            {% bootstrap_field form.password field_class="col-md-5" show_label=False layout="horizontal" size="small"  %}
+                        <button type="submit" class="btn btn-warning btn-lg">Entrar</button>
+					  </div>
+					</form>
+				</div><!-- /col-lg-6 -->
+				<div class="col-lg-6">
+					<img class="img-responsive" src="static/assets/img/ipad-hand.png" alt="">
+				</div><!-- /col-lg-6 -->
+
+			</div><!-- /row -->
+		</div><!-- /container -->
+
 {% endblock %}
