--- a/game/templates/games/game-list.html
+++ b/game/templates/games/game-list.html
@@ -61,6 +61,8 @@
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
                         </form>
+                    {% else %}
+                        <h3>Puntuación: {{ game.points }}</h3>
                     {% endif %}
                     </div>
             </div>
@@ -76,4 +78,5 @@
         <div class="row form-group"></div>
         <div class="row form-group"></div>
     </div>
+
 {% endblock %}
