--- a/game/templates/games/game-list.html
+++ b/game/templates/games/game-list.html
@@ -17,7 +17,7 @@
         <h1 class="centered">
             ¡Hola, {{ user }}!
         </h1>
-        <h2 class="centered">¿Qué quieres hacer?</h2>
+        <h2 class="centered" style="color: white;">¿Qué quieres hacer?</h2>
 
         <div class="container col-lg-push-3 col-sm-6">
             <div class="row centered" style="padding-top: 5%;">
@@ -26,7 +26,7 @@
                 </a>
             </div>
             <div class="row centered" style="padding-top: 5%;">
-                <a class="btn btn-warning btn-lg btn-block" href="{% url 'game:game-create' %}">
+                <a class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#continueModal">
                     Continuar partida
                 </a>
             </div>
@@ -44,64 +44,32 @@
     </div>
 
 
-    <div class="container col-md-push-4 col-xs-6 col-sm-4">
-        <div >
-            <div class="col-lg-3">
-                <h1><strong>Partida</strong></h1>
-            </div>
-            <div class="col-lg-3">
-                <h1><strong>Historia</strong></h1>
-            </div>
-            <div class="col-lg-3">
-                <h1><strong>Estado</strong></h1>
-            </div>
-            <div class="col-lg-3">
-                <h1><strong>Acción</strong></h1>
-            </div>
-        </div>
-        {% for game in object_list %}
-        <div>
-            <div class="col-lg-3">
-                <h3>{{ game.id }}</h3>
-            </div>
-            <div class="col-lg-3">
-                <h3>{{ game.story.name }}</h3>
-            </div>
-            <div class="col-lg-3">
-                {% if game.is_finished %}
-                <h3>Terminado</h3>
-                {% elif game.actual_question > 0 %}
-                <h3>En progreso</h3>
-                {% else %}
-                <h3>Sin comenzar</h3>
-                {% endif %}
-            </div>
-            <div class="col-lg-3">
-                <div class="row form-group"></div>
-                {% if not game.is_finished %}
-                <form action="{% url 'game:play-game' game.id %}" method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="game_id" value="{{ game.id }}">
-                    {% if game.actual_question > 0 %}
-                    <input type="submit" class="btn btn-info btn-xs" value="Continuar la aventura"/>
-                    {% else %}
-                    <input type="submit" class="btn btn-info btn-xs" value="Comenzar la aventura"/>
-                    {% endif %}
-                    <a class="btn btn-danger btn-sm" href="{% url 'game:game-delete' pk=game.id %}">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                </form>
-                {% else %}
-                <h3>Puntuación: {{ game.points }}</h3>
-                {% endif %}
-            </div>
-        </div>
 
-        {% endfor %}
+</div>
+
+
+<div id="continueModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Partidas en juego</h4>
+            </div>
+            <div class="modal-body">
+                {% for game in object_list %}
+                    {% if not game.is_finished %}
+                        <a href="{% url 'game:play-game' game_id=game.id %}">Continuar con la partida {{ game.id }}</a>
+                        <bR>
+                {% endif %}
+                {% endfor %}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
 
     </div>
 </div>
-
 {% endblock %}
 
 
