--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 
   <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,15 +13,20 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+<script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
   </head>
 
     <div id="headerwrap">
         {% block contenido %}
         {% endblock %}
     </div>
-
-    <div class="container">
-        <hr>
+    <footer class="navbar-fixed-bottom">
         <p class="centered">
             Creado por José Manuel Vázquez Crespo,
             Ernesto Wulff Olea,
@@ -28,10 +34,9 @@
             José Álvaro Gutierrez Romero,
             Julián Rodríguez Cárave
             y David Blanco Fuentes</p>
-    </div>
-    <div class="container">
-    <p class="centered">TORCUATO JONES - PINF - 2017</p>
-    </div>
 
+        <p class="centered">TORCUATO JONES - PINF - 2017</p>
+
+    </footer>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
