--- a/templates/base.html
+++ b/templates/base.html
@@ -27,16 +27,19 @@
         {% endblock %}
     </div>
     <footer class="navbar-fixed-bottom">
-        <p class="centered">
+        <!--
+        <div class="container">
             Creado por José Manuel Vázquez Crespo,
             Ernesto Wulff Olea,
             Juan José García Beza,
             José Álvaro Gutierrez Romero,
             Julián Rodríguez Cárave
-            y David Blanco Fuentes</p>
+            y David Blanco Fuentes
+            <hr>
+            TORCUATO JONES - PINF - 2017
 
-        <p class="centered">TORCUATO JONES - PINF - 2017</p>
+        </div>
+        -->
 
     </footer>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
