--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -29,8 +29,9 @@
 					{% csrf_token %}
 					{% bootstrap_field form.username field_class="col-md-5" show_label=False layout="horizontal" size="small"  %}
 					{% bootstrap_field form.password field_class="col-md-5" show_label=False layout="horizontal" size="small"  %}
-					<button type="submit" class="btn btn-warning btn-lg">Entrar</button>
-				</div>
+					<button type="submit" class="btn btn-primary btn-lg">Entrar</button>
+					<a  class="btn btn-lg btn-default" href="{% url 'user:signup' %}">dfghjk</a>
+						</div>
 
                 </div>
 
