--- a/game/templates/question/question.html
+++ b/game/templates/question/question.html
@@ -62,9 +62,20 @@
 
     <div class="row centered">
         <!-- Versión con imagen grande -->
+        {% if question.image %}
         <div class="col-lg-12">
             <img src="{{ question.image.url }}" class="img-thumbnail" height="600" width="500">
         </div>
+        {% endif %}
+        <form id="form3" action="{% url 'game:save-response' %}" onsubmit="return ValidateAttempts()" method="post">
+        {% csrf_token %}
+        <div class="col-lg-6 col-lg-push-3  ">
+        <input type="submit" class="btn btn-success btn-lg" value="Siguiente"/>
+        {% if cheat_number > 0 %}
+        <input type="submit" class="btn btn-warning btn-lg" id="cheat" value="Pista"/>
+        {% endif %}
+        </div>
+        </form>
     </div>
 
     {% elif not question.image %}
